# fake_luxary_api

./: Cargo.toml  README.md  flake.nix  wrapper
fla_client/: Cargo.toml
fla_client/src/: lib.rs
fla_common/: Cargo.toml
fla_common/src/: auth.rs  lib.rs  responses.rs  simulator.rs  streaming.rs  types.rs
fla_server/: Cargo.toml
fla_server/src/: data.rs  errors.rs  lib.rs  main.rs  tokens.rs  types.rs
fla_server/src/api/: auth.rs  mod.rs  streaming.rs
fla_server/src/api/owner/: commands.rs  mod.rs  vehicles.rs
fla_server/src/simulator/: data.rs  mod.rs  server.rs  types.rs
fla_test/: Cargo.toml
fla_test/src/: lib.rs
fla_test/tests/: streaming.rs  tokens.rs  vehicles.rs
src/: auth.rs  data.rs  errors.rs  lib.rs  main.rs  tokens.rs  types.rs
src/api/: auth.rs  streaming.rs
src/api/owner/: commands.rs  mod.rs  vehicles.rs
src/handlers/: mod.rs  streaming.rs  tokens.rs  vehicles.rs
src/simulator/: mod.rs  server.rs
tests/: streaming.rs  tokens.rs  vehicles.rs
tests/common/: mod.rs
