[package]
name = "fake_luxury_api"
version = "0.1.0"
edition = "2021"
default-run = "fake_luxury_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-auth = "0.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
http = "0.2.11"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
restest = "0.1.0"
