[package]
name = "fake_luxury_api"
version = "0.1.0"
edition = "2021"
default-run = "fake_luxury_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "ws"] }
axum-auth = "0.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
http = "0.2.11"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11.4", features = ["json", "serde_json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tap = "1.0.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
futures-util = "0.3.29"
reqwest = { version = "0.11.4", features = ["json"] }
tokio-tungstenite = "0.20.1"
url = "2.4.1"
restest = "0.1.0"
