[workspace]
members = [
    "fla_client",
    "fla_server",
    "fla_common",
    "fla_test",
]
resolver = "2"

[workspace.lints.rust]
missing-docs = "warn"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
