[package]
name = "fla_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fla_common = { path = "../fla_common" }
reqwest = "0.11.22"
tokio-tungstenite = "0.20.1"
http = "0.2.11"
url = "2.4.1"
tokio = { version = "1.34.0", features = ["full"] }
tap = "1.0.1"
futures-util = "0.3.29"
serde_json = "1.0.108"
thiserror = "1.0.50"
tracing = "0.1.40"
chrono = "0.4.31"
serde_path_to_error = "0.1.14"
