[package]
name = "fla_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
serde_json = "1.0.108"
