[package]
name = "fla_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
fla_common = { path = "../fla_common" }
fla_server = { path = "../fla_server" }
tokio = { version = "1.34.0", features = ["full"] }

# Delete after Refactor
http = "0.2.11"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"


[dev-dependencies]
futures-util = "0.3.29"
reqwest = { version = "0.11.4", features = ["json"] }
tokio-tungstenite = "0.20.1"
url = "2.4.1"
restest = "0.1.0"
