[package]
name = "fla_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
fla_common = { path = "../fla_common" }
fla_server = { path = "../fla_server" }
fla_client = { path = "../fla_client" }
chrono = "0.4.31"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[dev-dependencies]
restest = "0.1.0"
chrono = "0.4.31"
